# dataplane-emu

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Untitled-1.md  arm_neoverse_worker.sh  cobalt_worker.sh  demo_QD_1_32_128.sh  demo_architecture_walkthrough.md  diagnose_fuse.sh  launch_arm_neoverse_demo.sh  launch_arm_neoverse_demo_deterministic.sh  launch_cobalt_demo.sh  makefile
.github/agents/: Staff-Monadic-Hypervisor-R&D-Engineer.agent.md  Staff-Monadic-Hypervisor-R&D-Engineer.md
.github/workflows/: add-org-licenses.yml  generate_pdf.yml
docs/: RETROSPECTIVE_AND_RUNBOOK.md  SESSION_HANDOFF_2026-03-27.md
docs/arch/: Monadic Data Plane Architecture_ GPUDirect Update.md  double_trampoline.excalidraw  export_monadic_data_plane_png.py  export_png.py  generate_diagram.py  generate_monadic_data_plane.py  monadic_data_plane.excalidraw  qemu-nvme-storage-stack.md
docs/emulator/: ARCHITECT_BRIEF_DETERMINISTIC_DEMO.md  FUSE_BRIDGE_FIX.md  posix_intercept.md  spdk_queues.md
docs/publications/: Ping_Long_Memory Architectures for the Agentic AI Era_ Extreme Co-Design of Hardware and Software for Heterogeneous AI Factories.md
docs/publications/domain-specific-compilation/: README.md
docs/publications/eliminating-os-kernel/: README.md
docs/publications/industrial-agentic-ai/: README.md
docs/publications/lock-free-data-structures/: README.md
docs/research/: DOMAIN_SPECIFIC_COMPILATION.md
docs/solutions/: README.md
docs/tensorplane/: AGENT_ARCHITECTURE.md  AGENT_CHANGE_CONTROL.md  VISION.md
docs/tensorplane/adr/: 001-mcp-mixture-of-experts.md
docs/tensorplane/ledgers/: session_close_2026-03-25.md
examples/beyond-leetcode/01_time_shared_trap/: 01_naive_spin_trap.cpp  02_leetcode_mutex_fix.cpp  03_spdk_tpc_polling.cpp  CMakeLists.txt  README.md  makefile
fio/: test.fio
include/dataplane_emu/: intercept.hpp  spdk_env.hpp  sq_cq.hpp  telemetry.hpp
prompts/: SPDK on Azure Cobalt vs. AWS Graviton.md  agentic-governance-evaluator.md  cpp-dataplane-coder.md  deep-research-architect.md  lead_control_plane_ux_engineer1.md  lead_control_plane_ux_engineer2.md
scripts/: add-org-licenses.sh  build_spdk.sh  install-demo-sudoers.sh
scripts/agents/: sync-private-agents.sh
scripts/comm-linux/: auto-shutdown.sh
scripts/docs/: generate-pdf.sh  install-pandoc.sh
scripts/spdk-aws/: .env.template  README.md  cloud-init-userdata.yaml  provision-graviton.sh  setup_graviton_spdk.sh  start-graviton.ps1  start_spdk.sh
scripts/spdk-azure/: .env.template  deallocate-cobalt.sh  identity-setup.sh  provision-cobalt.sh  setup-spdk-azure.sh  start_spdk_azure.sh
src/: dataplane_ring.cpp  intercept.cpp  main.cpp  sq_cq.cpp
src/fuse_bridge/: interceptor.cpp  interceptor.h
tests/: intercept_test.cpp  run_preload.sh
vibe_demo_agent/: README.md  benchmark_runner.py  engine_manager.py  logo.sh  run_demo.sh  scenario_1.sh  setup_demo.sh  telemetry_sink.py  vibe_demo_agent.py
